[B]1.0.3[/B]
Updated language files from Transifex

[B]1.0.2[/B]
Tuned: Artist Splitter

[B]1.0.1[/B]
Changed: New Scraper Icon

[B]1.0.0[/B]
Initial version