@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
-<!-- Danish language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/da/ -->
+<!-- Finnish language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/fi/ -->
 <!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
 
 <strings>
-    <string id="30004">Aktiver Fankunst til Kunstnere fra fanart.tv</string>
-    <string id="30005">Aktiver Miniaturebilleder til Kunstnere fra fanart.tv</string>
+    <string id="30004">Ota käyttöön artistien fanitaide lähteestä fanart.tv</string>
+    <string id="30005">Ota käyttöön artistien pikkukuvat lähteestä fanart.tv</string>
 </strings>
